--- a/Project Development Phase/Sprint 2/.env
+++ b/Project Development Phase/Sprint 2/.env
@@ -1,2 +1,2 @@
-SENDGRID_API_KEY="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"
-MAIL_DEFAULT_SENDER="2019cs0465@svce.ac.in"
+SENDGRID_API_KEY="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"
+MAIL_DEFAULT_SENDER="heckerssolution@outlook.com"
